# alacritty

./: Cargo.toml
alacritty/: Cargo.toml
alacritty/src/: event.rs  logging.rs  main.rs
alacritty/src/display/: mod.rs  window.rs
