[workspace]
members = [
    "alacritty",
    "alacritty_terminal",
    "alacritty_config_derive",
]

[profile.release]
lto = true
debug = 1
incremental = false

# TODO: delete this before creating PR
[patch.crates-io]
winit = { git = "https://github.com/kawaemon/winit.git", branch = "fix-composition" }
